src/test/deca/context/valid/class/32-declMethodeSig2.deca
/* Description:
    teste la regle (2.7) en cas de redéclaration de méthode valid (la même signature et le même type de retour)

    Historique:
      cree le 21/01/2020
*/

class A {
  float doNothing(int a, int b, float x, C c, D d){}

}

class B extends A {
  float doNothing(int a, int b, float x, C c, D d){}
}

class C extends A{
  float doNothing(int a, int b, float x, C c, D d){}
}
class D extends B{
  float doNothing(int a, int b, float x, C c, D d){}
}
